2006-05-05  Alex Roitman  <shura@gramps-project.org>
	* src/DisplayTabs/_MediaBackRefList.py: Import model.

2006-05-05  Don Allingham  <don@gramps-project.org>
	* src/ViewManager.py: Add undo history menu entry

2006-05-04  Alex Roitman  <shura@gramps-project.org>

	* src/Makefile.am (gdir_PYTHON): Remove DisplayTabs.py.
	* src/plugins/Makefile.am (pkgdata_PYTHON): Ship rel_sk.py.

	* src/Filters/Rules/Makefile.am (pkgdata_PYTHON): Add mising files.
	* src/DisplayTabs.py: remove file.
	* src/DisplayTabs: Add package.

2006-05-04  Don Allingham  <don@gramps-project.org>
	* src/glade/gramps.glade: add call name field, add id fields
	* src/glade/edit_person.glade: add call name field
	* src/DataViews/_PersonView.py: start of filter sidebar,
	use hbox instead of hpaned
	* src/Editors/_EditPlace.py: add ID field
	* src/Editors/_EditSource.py: add ID field
	* src/Editors/_EditEventRef.py: add ID field
	* src/Editors/_EditEvent.py: add ID field

2006-05-04  Alex Roitman  <shura@gramps-project.org>
	* src/SelectObject.py: Convert to managed window.
	* src/SelectEvent.py: Convert to managed window.
	* src/SelectSource.py: Convert to managed window.
	* src/DisplayTabs.py: Properly call selectors.
	(DataEmbedList): Hook up data map for sources.

2006-05-03  Alex Roitman  <shura@gramps-project.org>
	* src/DisplayTabs.py (NoteTab.build_interface): Add spacing to
	radiobuttons.
	* src/plugins/ReorderIds.py (ReorderIds.reorder): Switch from
	cursors to keys iteration.

2006-05-03  Don Allingham  <don@gramps-project.org>
	* src/ViewManager.py: do a better job of building the buttons.

2006-05-03  Alex Roitman  <shura@gramps-project.org>
	* src/PluginUtils/_Tool.py (BatchTool): Add class taking care of
	tools with batch transactions.
	(ActivePersonTool.pass): Remove method.
	* src/plugins/Check.py (Check): Derive from BatchTool.
	* src/plugins/ReorderIds.py (ReorderIds): Use batch transactions;
	derive from BatchTool.
	* src/plugins/ChangeTypes.py (ChangeTypes): Use batch